--- a/apps/docs/src/pages/examples/kpis.mdx
+++ b/apps/docs/src/pages/examples/kpis.mdx
@@ -4,8 +4,8 @@ import dataLoading from "../../examples/kpis/DataLoading?raw";
 import selectable from "../../examples/kpis/Selectable?raw";
 import semantic from "../../examples/kpis/Semantic?raw";
 
-# KPI examples
-
-<CodeBlock layout="expandable" code={semantic} />
-<CodeBlock layout="expandable" code={selectable} />
-<CodeBlock layout="expandable" code={dataLoading} />
+<div className="mt-20">
+  <CodeBlock layout="expandable" code={semantic} />
+  <CodeBlock layout="expandable" code={selectable} />
+  <CodeBlock layout="expandable" code={dataLoading} />
+</div>
