--- a/apps/docs/src/pages/docs/introduction.mdx
+++ b/apps/docs/src/pages/docs/introduction.mdx
@@ -2,7 +2,7 @@
 
 Welcome to **UI Kit**, an open-source React UI library developed by **Hitachi Vantara** to streamline the development of high-quality digital products.
 
-**UI Kit** promotes design consistency through carefully crafted components and offers a powerful [theming system](/docs/theming) that enables advanced customization for creating unique user experiences.
+**UI Kit** promotes design consistency through carefully crafted components and offers a flexible [theming system](/docs/theming) that enables advanced customization for creating unique user experiences.
 
 With a comprehensive suite of components and detailed usage guidelines, **UI Kit** improves development speed and frees up time to focus on building innovative solutions.
 
