--- a/apps/docs/src/pages/examples/charts.mdx
+++ b/apps/docs/src/pages/examples/charts.mdx
@@ -4,9 +4,7 @@ import donutChartTotal from "../../examples/charts/DonutChartTotal?raw";
 import gaugeChart from "../../examples/charts/GaugeChart?raw";
 import lineChartStreamingCode from "../../examples/charts/LineChartStreaming?raw";
 
-# Charts examples
-
-<div className="overflow-hidden">
+<div className="overflow-hidden mt-20">
   <div className="w-101% grid  divide-border [grid-template-columns:repeat(auto-fit,minmax(480px,1fr))] -mt-px -mb-px">
     <CodeBlock code={{ main: donutChartTotal }} layout="popup" />
     <CodeBlock code={{ main: gaugeChart }} layout="popup" />
