--- a/apps/docs/src/pages/examples/charts.mdx
+++ b/apps/docs/src/pages/examples/charts.mdx
@@ -6,7 +6,7 @@ import lineChartStreamingCode from "../../examples/charts/LineChartStreaming?raw
 
 # Charts examples
 
-<div className="overflow-hidden">
+<div className="overflow-hidden h-full">
   <div className="w-101% grid  divide-border [grid-template-columns:repeat(auto-fit,minmax(480px,1fr))] -mt-px -mb-px">
     <CodeBlock code={{ main: donutChartTotal }} layout="popup" />
     <CodeBlock code={{ main: gaugeChart }} layout="popup" />
