--- a/apps/docs/src/pages/examples/inputs.mdx
+++ b/apps/docs/src/pages/examples/inputs.mdx
@@ -8,7 +8,7 @@ import tagsSuggestions from "../../examples/inputs/TagsSuggestions?raw";
 
 # Inputs examples
 
-<div className="overflow-hidden">
+<div className="overflow-hidden h-full">
   <div className="w-101% grid  divide-border [grid-template-columns:repeat(auto-fit,minmax(360px,1fr))] -mt-px -mb-px">
     <CodeBlock code={{ main: dropdownPrefix }} layout="popup" />
     <CodeBlock code={{ main: copyButton }} layout="popup" />
