--- a/apps/docs/src/pages/app-shell/configuration.mdx
+++ b/apps/docs/src/pages/app-shell/configuration.mdx
@@ -1,336 +1,323 @@
-# App Shell configuration
+# Configuration
 
-As already mentioned, the **App Shell** configuration file holds the application's configuration, and it can be either a JSON or a TypeScript (recommended) file.
+The **App Shell** `app-shell.config.ts` configuration file holds the application's configuration.
+
+It expects a `default export` of an object that adheres to the `HvAppShellConfig` interface.
+You can find the [configuration properties documentation](#configuration-properties) below.
+
+```tsx
+// app-shell.config.ts
+import type { HvAppShellConfig } from "@hitachivantara/app-shell-vite-plugin";
+
+export default {
+  name: "App Name",
+  baseUrl: "/",
+  navigationMode: "ONLY_LEFT",
+  apps: {
+    "@hv-apps/my-app": "https://example.com:3001/",
+    "@hv-apps/another-app": "https://example.com:5001/",
+  },
+  // ...
+} satisfies HvAppShellConfig;
+```
 
 ## Module locations
 
 Properties that reference modules' locations can be:
 
-- A **bare-specifier**, such as `@hv-apps/my-app/pages/Hello.js`. The bare-specifier prefix must be mapped to a URL (`baseUrl`) in the [`apps` property](#application-bundles-registration).
-- A fully qualified URL, like `http://localhost:3001/pages/Hello.js`, which directly points to the module’s location.
+1. A **bare-specifier**, such as `@hv-apps/my-app/pages/Hello.js`. The bare-specifier prefix must be mapped to a URL ([`baseUrl`](#baseurl)) in the [`apps` property](#apps).
+2. A fully qualified URL, like `http://localhost:3001/pages/Hello.js`, which directly points to the module's location.
 
-During development, the following additional module location can also be used:
+Note: During development, the bare-specifier with a `@self` prefix (eg. `@self/pages/Hello.js`) can also be used, referring to the module within the current Application Bundle.
 
-- A bare-specifier with a `@self` prefix, like `@self/pages/Hello.js`, refers to the module within the current Application Bundle.
+### Module structure
+
+The **App Shell** configuration file uses a common structure to declare modules, which be found in [`mainPanel`](#mainpanel) views, [`header`](#header) actions, or [`providers`](#providers).
+The common structure has the following specification:
+
+- `bundle`: a string with the [module location](#module-locations).
+- `config`: an optional properties object, passed to the module when it is loaded.
+
+Example:
+
+```ts
+{
+  bundle: "@hv-apps/my-app/pages/Hello.js",
+  config: {
+    name: "John",
+    age: 30,
+  }
+}
+```
+
+```tsx
+// Hello.tsx
+export default function Hello({ name, age }) {
+  return <h1>{`Hello ${name} (${age})!`}</h1>;
+}
+```
 
 ## Internationalization
 
-Properties that receive text values can be internationalized by using a key that is present on the bundle of the [`translations` property](#localization).
+Properties that receive text values can be internationalized by using a key that is present on the bundle of the [`translations` property](#translations).
 
 If a value, used in any of the internationalizable properties, is not present on the translations bundle then it will be used as is.
 
-## Configuration Properties
+## Configuration properties
 
-### Application Identity
+The `HvAppShellConfig` configuration has the following properties:
 
-#### _name_
+### `name`
 
 Specifies the product name displayed in the header and in the browser tab. Supports internationalization.
 
-#### _baseUrl_
+### `baseUrl`
 
-The base path for the product, required when it isn't hosted at the root of the hosting service. Defaults to "/" if not present.
+The base path for the product, required when it isn't hosted at the root of the hosting service. Defaults to `"/"` if not present.
 
-#### _logo_
+### `logo`
 
 Defines the product logo. It includes:
 
-- **name**: Either `HITACHI`, `LUMADA`, or `PENTAHO+`. Defaults to `HITACHI`.
-- **description**: The descriptive text of the logo, that is also subject to internationalization.
+- `name`: Either `HITACHI`, `LUMADA`, or `PENTAHO+`. Defaults to `HITACHI`.
+- `description`: The descriptive text of the logo, that is also subject to internationalization.
 
 If you don't want to add a logo to the header, explicitly set the menu item `logo` to `null`.
 
-### Application Bundles Registration
-
-#### _apps_
+### `apps`
 
 Key-value object of _Application Bundles_ IDs and their respective locations. Used by the **App Shell** to generate the importmap and thus allowing the import of ES Modules from different _Application Bundles_.
 
 Example:
 
-```jsonc
-// ...
-  apps: {
-      "@hv-apps/an-app": "http://localhost:3001/",
-      "@hv-apps/another-app": "http://localhost:5001/"
-  }
-// ...
+```ts
+apps: {
+  "@hv-apps/an-app": "http://localhost:3001/",
+  "@hv-apps/another-app": "http://localhost:5001/"
+}
 ```
 
-See [Registering other _Application Bundles_](./other-apps.md) for more information.
+In order to reference Views and Shared Modules from other Application Bundles', one must be registered in the App Shell's configuration.
 
-### Main Panel
+When registered, the _Application Bundle_'s contents can then be referenced as "subpaths" of its module ID.
 
-#### _mainPanel_
+```ts
+{ route: "/hello", bundle: "@hv-apps/another-app/pages/Other.js" }
+```
+
+```tsx
+import { getName } from "@hv-apps/another-app/modules/nameGenerator.js";
+
+export default function Hello() {
+  return <h1>Hello {getName()}!</h1>;
+}
+```
+
+### `mainPanel`
 
 Defines the main panel content properties. Accepts the following:
 
-- _**views**_: Array of _View_ items. Each _View_ item is defined by the following set of values:
-  - **bundle**: The module location of the _View_. **Required**.
-  - **route**: Defines the route of the _View_. **Required**.
-  - **config**: Bag of properties that will be sent to the exported component as properties. These are defined by the component itself. See example in our simple-app [configuration file](../client/samples/simple-app/app-shell.config.json) and [basic usage](../client/samples/simple-app/src/pages/SecondPage/SecondPage.tsx).
-  - **views**: Array of nested _View_ items. **route** will be appended to the parent route. See [Nested Views](./views.md#nested-views) for more information.
+#### `mainPanel.views`
 
-The mainPanel also accepts any of the [UI Kit's HVContainer props](https://lumada-design.github.io/uikit/master/?path=/docs/components-container--main), for configuring the container that wraps the _Views_. Note that the _maxWidth_ prop defaults to `"xl"` in the **App Shell**, instead of `false` as in the UI Kit.
+An array of _View_ items that will be displayed in the main panel, extending the base [module structure](#module-structure) with the following properties:
 
-The same properties can be used on any top-level _View_ item, and they will override the ones defined at the _mainPanel_ for that particular _View_. Nested _Views_ are not wrapped by a container, so these properties are not applicable.
+- `route`: Defines the route path of the _View_.
+- `views`: Array of nested _View_ items. **route** will be appended to the parent route. See [Nested Views](./routing#nested-views) for more information.
+
+Note: The `mainPanel` and non-nested `views` accept any of the [`HvContainer` props](/components/container?tab=props), for configuring the container that wraps the _Views_.
+The `maxWidth` prop defaults to `"xl"`, instead of `false` as in the UI Kit.
 
 Example:
 
-```jsonc
-// ...
-  mainPanel:
+```ts
+mainPanel: {
+  maxWidth: "sm",
+  views: [
     {
-      maxWidth: "sm",
-      views: [
-        {
-          bundle: "@hv-apps/my-app/pages/Hello.js",
-          route: "/hello",
-          config: {
-            name: "John"
-          }
-        },
-        {
-          bundle: "@hv-apps/another-app/pages/Person.js",
-          route: "/contacts/:name",
-          maxWidth: "lg",
-          fixed: true
-        }
-        // ...
-      ]
+      bundle: "@hv-apps/my-app/pages/Hello.js",
+      route: "/hello",
+      config: {
+        name: "John"
+      }
+    },
+    {
+      bundle: "@hv-apps/another-app/pages/Person.js",
+      route: "/contacts/:name",
+      maxWidth: "lg",
+      fixed: true
     }
-// ...
+  ]
+}
 ```
 
-See [Views and Routes](./views.md) for more information.
+See [Routing](./routing) for more information.
 
-### Navigation
+### `menu`
 
-#### _menu_
+Describes the _Product's_ menus, with each item potentially having submenus and associated icons. It's an array where each menu item is defined by the following set of values:
 
-Describes the _Product's_ menus, with each item potentially having submenus and associated icons.
+- `label`: The menu label (visible by the users at the browser). **Required**. Supports internationalization.
+- `target`: The route value defined at the view.
+- `icon`: The icon associated with the app.
+  - `iconType`: Type of icon to be used (at this moment the only possible value is `uikit`).
+  - `name`: Name of the icon to be used (as identified at [UI Kit's icons library](/docs/icon-library#library))
+- `submenus`: Nested/recursive array of [`menu`](#menu) items.
 
-It's an array where each menu item is defined by the following set of values:
-
-- _**label**_: The menu label (visible by the users at the browser). **Required**. Supports internationalization.
-- _**target**_: The route value defined at the view.
-- _**icon**_: The icon associated with the app.
-  - _**iconType**_: Type of icon to be used (at this moment the only possible value is `uikit`).
-  - _**name**_: Name of the icon to be used (as identified at [UI Kit's icons library](https://lumada-design.github.io/uikit/master/?path=/docs/foundation-icons--main))
-- _**submenus**_: Array of sub menu items.
-  - the props for this object are the same as the top menu:
-    - label
-    - target
-    - icon
-    - submenus
-
-> **WARNING:** At the moment, **`target` and `submenus` properties should not be used together in the definition of a menu item**.
+> **WARNING:** `target` and `submenus` properties should not be used together in the definition of a menu item.
 
 To give more context, when we use the Vertical Navigation panel and perform a menu item click, it needs to know if it should navigate to the given target or open its submenu tree. Since this is done by explicitly checking which property exists. Also, when navigating to a URL, **App Shell** will try its best to find which menu should be selected and as such, having both target and submenus property can lead to behaviour inconsistency.
 
 Example:
 
-```jsonc
-// ...
-  menu: [
-    {
-      label: "Page 1",
-      icon: {
-        iconType: "uikit",
-        name: "Open"
+```ts
+menu: [
+  {
+    label: "Page 1",
+    icon: { iconType: "uikit", name: "Open" },
+    submenus: [
+      {
+        label: "Sub Page 1",
+        target: "/subpage1",
+        icon: { iconType: "uikit", name: "Close" },
       },
-      submenus: [
-        {
-          label: "Sub Page 1",
-          target: "/subpage1",
-          icon: {
-            iconType: "uikit",
-            name: "Close"
-          }
-        },
-        {
-          label: "Sub Page 2",
-          submenus: [
-            // ...
-          ]
-        }
-      ]
-    },
-    {
-      label: "Page 2",
-      target: "/page2"
-    }
-    // ...
-  ]
-// ...
+    ],
+  },
+  {
+    label: "Page 2",
+    target: "/page2",
+  },
+];
 ```
 
-See [Navigation](./navigation.md) for more information.
+See [Navigation](./navigation) for more information.
 
-#### _navigationMode_
+### `navigationMode`
 
 Determines the layout of the navigation. The possible options are:
 
-`TOP_AND_LEFT` - In this mode, the first level of menu items will be displayed on the top (inside the header), and the remaining items will be displayed inside a vertical navigation panel on the left.
+- `TOP_AND_LEFT`: In this mode, the first level of menu items will be displayed on the top (inside the header), and the remaining items will be displayed inside a vertical navigation panel on the left.
+- `ONLY_TOP`: In this mode all navigation will be presented on the top. With this mode, only two levels of menus will be displayed: the first one inside the header, and the second one will appear below the header on an extra navigation bar.
+- `ONLY_LEFT`: In this mode, all the menu structure will be displayed on the left vertical navigation panel. No items will appear on the top.
 
-**Note** This is the default option when none is provided.
-
-`ONLY_TOP` - In this mode all navigation will be presented on the top. With this mode, only two levels of menus will be displayed: the first one inside the header, and the second one will appear below the header on an extra navigation bar.
-
-`ONLY_LEFT` - In this mode, all the menu structure will be displayed on the left vertical navigation panel. No items will appear on the top.
-
-### Header Customization
-
-#### _header_
+### `header`
 
 Defines all customizations that can be applied to the Header of the **App Shell**:
 
-- _**actions**_: _Header Actions_ that will be displayed on the Header. It is composed of an array of objects where each object has the following options:
-  - _**bundle**_: The module location of the _Header Action_. **Required**.
-  - _**config**_: Bag of properties that will be sent to the exported component as props. These are defined by the component itself.
+#### `header.actions`
+
+_Header Actions_ that will be displayed on the Header. It follows the [module structure](#module-structure) object API.
 
 Example:
 
-```jsonc
-// ...
-  header: {
-    actions: [
-      {
-        bundle: "@hv/user-notifications-client/index.js",
-        config: {
-          showCount: false
-        }
-      },
-      {
-        bundle: "@hv/theming-client/colorModeSwitcher.js"
-      }
-      // ...
-    ]
-  }
-// ...
+```ts
+actions: [
+  {
+    bundle: "@hv/user-notifications-client/index.js",
+    config: {
+      showCount: false,
+    },
+  },
+  {
+    bundle: "@hv/theming-client/colorModeSwitcher.js",
+  },
+];
 ```
 
-See [Header Actions](./header-actions.md) for more information and see the available **App Shell** built-in actions.
+See [Header actions](./header-actions) for more information and see the available **App Shell** built-in actions.
 
-### Shared Context
+### `providers`
 
-#### _providers_
+This prop defines the _Providers_ that will wrap all the _Views_ and _Shared Modules_:
 
-This prop defines the _Providers_ that will wrap all the _Views_ and _Shared Modules_. It is an array of objects where each object has the following options:
+```ts
+providers: [
+  { bundle: "@hv-apps/some-app/providers/SomeProvider.js" },
+  { bundle: "@hv-apps/other-app/providers/OtherProvider.js" },
+];
+```
 
-- _**bundle**_: The module location of the _Provider_. **Required**.
+Notes:
 
-See [Sharing State](./state.md) for more information.
+- Each _Application Bundle_ ideally should expose just a single _Provider_. If multiple _Providers_ are needed, they can be composed into a single _Provider_.
+- The **App Shell** will instantiate the _Providers_ in the order they are declared in the configuration file. However, dependencies between _Providers_ should be avoided, and never rely on the existence of another _Provider_.
+- This shouldn't be abused: Context only needed for the rendering of a _View_ shouldn't be put on a global _Provider_ just because another _View_ needs it. E.g. the i18next provider should continue to be instantiated on every view, using a HOC for example, instead of having a global provider for each _Application Bundle_, each with its own i18next provider always instanced in case it is needed.
 
-### Localization
-
-#### _translations_
+### `translations`
 
 This property defines bundles of translations that need to be added in runtime to **App Shell** translation bundle.
 These are **NOT** available to the _Views_.
 
-Being an object, it is required to have as root the language (en, pt, etc..) of the bundle:
+Being an object, it is required to have as root the language (en, pt, etc.) of the bundle:
 
-Example:
-
-```jsonc
- // ...
-  name: "translationKey",
-  logo: {
-    name: "HITACHI",
-    description: "logoDesc"
-  },
-  menu: [
-    {
-      label: "pageOne",
-      target: "/page1"
-    }
-    // ...
-  ],
-  translations: {
-    en: {
-      translationKey: "An Amazing App",
-      logoDesc: "Company logo",
-      pageOne: "Page One"
-    },
-    pt: {
-      translationKey: "Uma App Fantástica",
-      logoDesc: "Logo da empresa",
-      pageOne: "Página Um"
-    }
+```ts
+name: "translationKey",
+logo: {
+  name: "HITACHI",
+  description: "logoDesc"
+},
+menu: [
+  {
+    label: "pageOne",
+    target: "/page1"
   }
- // ...
+],
+translations: {
+  en: {
+    translationKey: "An Amazing App",
+    logoDesc: "Company logo",
+    pageOne: "Page One"
+  },
+  pt: {
+    translationKey: "Uma App Fantástica",
+    logoDesc: "Logo da empresa",
+    pageOne: "Página Um"
+  }
+}
 ```
 
 In the example above, the name of the application, that appears on the browser tab and on the header,
 defines a key that exists on the translations bundle and so will be translated by **App Shell** accordingly.
 The same happens with other localized properties (like the logo description or menu labels).
 
-See [Localization](./localization.md) for more information.
+_Application Bundles_ may use different localization libraries, but using i18next is the recommendation.
+The **App Shell does not** provide translations to the embedded _Views_ meaning that each _Application Bundle_ must handle its own translations.
 
-### Theme Configuration
+A _View_ may accidentally access the **App Shell**'s i18next instance when using the `useTranslation` hook.
+Because of that, _Application Bundles_ must ensure they use its own i18next instance to avoid collision and incorrect information display.
+For more information check the documentation at [i18next.com/overview/api](https://www.i18next.com/overview/api#createinstance).
 
-#### _theming_
+### `theming`
 
 This property defines the theme of the _Product_, and it supports both the base UI Kit themes and custom themes.
 
 The config object for it has the following options:
 
-- _**themes**_: Array of available themes. The base UI Kit themes are identified by "ds5", "ds3", and "pentahoPlus" and the custom themes are identified by module to be loaded. Defaults to `["ds5"]`.
-- _**theme**_: The active theme. It is the name defined in the theme definition, not the module name. Defaults to the first theme in the themes array.
-- _**colorMode**_: The color mode of the theme. Defaults to the default color mode of the theme. UI Kit base themes support "dawn" and "wicked" color modes (defaulting to "dawn"). Custom themes define their own color modes.
+- `themes`: Array of available themes. Can be one of the built-in UI Kit themes (`"ds3"`, `"ds5"`, `"pentahoPlus"`), or a custom theme identified by the module.
+- `theme`: The active theme. It is the name defined in the theme definition, not the module name. Defaults to the first theme in the themes array.
+- `colorMode`: The color mode of the theme. Defaults to the default color mode of the theme. UI Kit base themes support "dawn" and "wicked" color modes (defaulting to "dawn"). Custom themes define their own color modes.
 
-See [Theming](./theming.md) for more information.
-
-## Other features
-
-## Tokens
-
-When using the **JSON format**, the configuration can use tokens that are to be replaced at build time, and they must be wrapped, at the beginning and at the end, by `@@` sequence. This can be used anywhere in the configuration file.
-
-```jsonc
-// ...
-  apps: {
-     "@hv/user-notifications-client": "@@USER_NOTIFICATIONS_URL@@"
-  }
-// ...
-```
-
-To complete the token replacement, final values should be set at app `vite.config.ts` file
+Example:
 
 ```ts
-return {
-  plugins: [
-    react(),
-    tsconfigPaths(),
-    HvAppShellVitePlugin({
-      mode,
-      configTokensToReplace: [
-        {
-          token: "USER_NOTIFICATIONS_URL",
-          value: "http://localhost:8080",
-        },
-      ],
-    }),
-  ],
-  // ...
-};
+theming: {
+  themes: ["ds5", "@hv-apps/my-app/tatooine.js"],
+  theme: "tatooine",
+  colorMode: "sand"
+}
 ```
+
+#### Custom theme
+
+Custom themes are a _Shared Module_ that exports a UI Kit theme definition. For more information on theme structures, refer to the [UI Kit theming documentation](/docs/theming).
 
 ## Env variables
 
-When using the **Typescript format**, the configuration can use environment variables that are to be replaced at build time.
+The configuration can use environment variables that are to be replaced at build time.
 
-```jsonc
-// ...
-  apps: {
-    "@hv/user-notifications-client": env.VITE_USER_NOTIFICATIONS_URL || "http://localhost:8080"
-  }
-// ...
+```ts
+apps: {
+  "@hv/user-notifications-client": process.env.VITE_USER_NOTIFICATIONS_URL || "http://localhost:8080"
+}
 ```
 
-These variables should be set at `.env` files like explained [here](https://create-react-app.dev/docs/adding-custom-environment-variables/#what-other-env-files-can-be-used) and declared as below example:
-
-```
-VITE_USER_NOTIFICATIONS_URL="http://example:7070"
-```
+These variables should be set at `.env` files like explained [here](https://vite.dev/guide/env-and-mode).
