docs: add `color` prop to styling section

--- a/apps/docs/src/pages/components/badge.mdx
+++ b/apps/docs/src/pages/components/badge.mdx
@@ -83,7 +83,7 @@ To display a badge on any content, wrap the `children` content with the badge co
 
 ### Color
 
-Customize the badge’s color using the color prop. It accepts any UI Kit or CSS color.
+Customize the badge’s color using the [`color`](/docs/styling#color-prop) prop.
 
 ```tsx live
 <div className="flex gap-sm">
