--- a/apps/docs/src/pages/components/checkbox.mdx
+++ b/apps/docs/src/pages/components/checkbox.mdx
@@ -32,7 +32,7 @@ export const getStaticProps = async ({ params }) => {
 
 ### Color
 
-You can use the `color` prop to style the color of the checkbox. It accepts any UI Kit or CSS color.
+You can use the [`color`](/docs/styling#color-prop) prop to style the color of the checkbox.
 
 ```tsx live
 <div className="flex gap-sm">
