--- a/apps/docs/src/pages/components/switch.mdx
+++ b/apps/docs/src/pages/components/switch.mdx
@@ -53,7 +53,7 @@ export default function Demo() {
 
 ### Custom colors
 
-You can use the `color` prop to style the color of the switch.
+You can use the [`color`](/docs/styling#color-prop) prop to style the color of the switch.
 
 ```tsx live
 import { useState } from "react";
