--- a/apps/docs/src/pages/components/tag.mdx
+++ b/apps/docs/src/pages/components/tag.mdx
@@ -25,7 +25,7 @@ export const getStaticProps = async ({ params }) => {
 
 ### Colors
 
-Customize the tag’s color using the `color` prop. It accepts any UI Kit or CSS color.
+Customize the tag’s color using the [`color`](/docs/styling#color-prop) prop.
 
 ```tsx live
 <div className="flex gap-xs">
