--- a/apps/docs/src/pages/components/radio.mdx
+++ b/apps/docs/src/pages/components/radio.mdx
@@ -31,7 +31,7 @@ export const getStaticProps = async ({ params }) => {
 
 ### Color
 
-You can use the `color` prop to style the color of the radio. It accepts any UI Kit or CSS color.
+You can use the [`color`](/docs/styling#color-prop) prop to style the color of the radio.
 
 ```tsx live
 <div className="flex gap-sm">
