chore: add Canvas examples page

--- a/apps/docs/src/pages/components/canvas.mdx
+++ b/apps/docs/src/pages/components/canvas.mdx
@@ -31,4 +31,4 @@ And wrap your components with it:
 ```
 
 A sample that exemplifies how the canvas components can be used is available
-[here](https://lumada-design.github.io/uikit-app/master/templates/canvas).
+[here](/examples/canvas).
