chore(docs): remove hitachivantara refences and improve README

--- a/apps/docs/src/pages/components/card.mdx
+++ b/apps/docs/src/pages/components/card.mdx
@@ -85,8 +85,7 @@ To add actions to a card, use the `HvActionBar` component.
       }
       subheader={
         <HvTypography>
-          Get started with the Hitachi Vantara UI Kit and build your next
-          project.
+          Get started with the UI Kit and build your next project.
         </HvTypography>
       }
     />
