--- a/apps/docs/src/pages/components/footer.mdx
+++ b/apps/docs/src/pages/components/footer.mdx
@@ -20,7 +20,7 @@ export const getStaticProps = async ({ params }) => {
       defaultValue: "Pentaho+",
     },
     copyright: {
-      defaultValue: "© Hitachi Vantara LLC 2025. All Rights Reserved.",
+      defaultValue: "",
     },
     links: {
       defaultValue: "Privacy Policy",
