--- a/apps/docs/src/pages/components/index.mdx
+++ b/apps/docs/src/pages/components/index.mdx
@@ -1,6 +1,6 @@
-# UI Kit Components
+# Components
 
-UI Kit Components are the building blocks of your application.
+**UI Kit** Components are the building blocks of your application.  
 They are designed to be reusable and customizable, allowing you to create a consistent look and feel across your app.
 
 Most components are available in the [core package](https://npm.im/@hitachivantara/uikit-react-core), available in the public npm repository:
