--- a/apps/docs/src/pages/components/typography.mdx
+++ b/apps/docs/src/pages/components/typography.mdx
@@ -35,7 +35,7 @@ export const getStaticProps = async ({ params }) => {
   decorator={(children) => (
     <div className="w-200px text-balance">{children}</div>
   )}
-  children={"Welcome to Hitachi Vantara's UI Kit."}
+  children={"Welcome to the UI Kit."}
 />
 
 ### Root component
