--- a/apps/docs/src/pages/docs/index.mdx
+++ b/apps/docs/src/pages/docs/index.mdx
@@ -1,6 +1,6 @@
 # Introduction
 
-Welcome to **UI Kit**, an open-source React UI library developed by **Hitachi Vantara** to streamline the development of high-quality digital products.
+Welcome to **UI Kit**, an open-source React UI library developed to streamline the development of high-quality digital products.
 
 **UI Kit** promotes design consistency through carefully crafted components and offers a flexible [theming system](/docs/theming) that enables advanced customization for creating unique user experiences.
 
