fix(Badge): fix P+ styles for primary badges

--- a/apps/docs/src/pages/components/badge.mdx
+++ b/apps/docs/src/pages/components/badge.mdx
@@ -88,7 +88,7 @@ Customize the badge’s color using the [`color`](/docs/styling#color-prop) prop
 ```tsx live
 <div className="flex gap-sm">
   <HvBadge showCount label={8} icon={<Alert />} />
-  <HvBadge color="primary" showCount label={8} icon={<Alert />} />
+  <HvBadge color="primaryDimmed" showCount label={8} icon={<Alert />} />
   <HvBadge color="bgPageSecondary" showCount label={8} icon={<Alert />} />
   <HvBadge color="positive" showCount label={8} icon={<Alert />} />
   <HvBadge color="coral" showCount label={8} icon={<Alert />} />
